gobmkida/c1/get_from_test_array
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/get_from_test_array/src/patterns/dfa.c:1166:29: error: use of undeclared identifier 'gtest'
return get_from_entry_list( gtest.hash[( _DWORD)pta + l - ( v3 & 0xFFFFF000)], ( int)pta, l); 
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/get_from_test_array/src/obj/3/dfa.o] Error 1
